--- a/application/hotsweek/view/reporter/index.html
+++ b/application/hotsweek/view/reporter/index.html
@@ -1,7 +1,23 @@
-<script>
-    var playerID = {$playerID};
-    var weekNumber = {$weekNumber};
-    var lang = {$lang};
-</script>
-<script src="/scripts/hotsweek/js/presets.js"></script>
-<script src="/scripts/hotsweek/js/main.js"></script>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
+    {if $lang === 0}
+    <title>Hotsweek Report - Week Number {$weekNumber}</title>
+    {else}
+    <title>背锅周报 - {$weekNumber} 周</title>
+    {/if}
+    <script>
+        var playerID = {$playerID};
+        var weekNumber = {$weekNumber};
+        var lang = {$lang};
+    </script>
+    <script src="/scripts/hotsweek/js/presets.js"></script>
+    <script src="/scripts/hotsweek/js/main.js"></script>
+</head>
+<body>
+
+</body>
+</html>
