--- a/application/hotsweek/view/reporter/index.html
+++ b/application/hotsweek/view/reporter/index.html
@@ -4,18 +4,19 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
-    {if $lang === 0}
-    <title>Hotsweek Report - Week Number {$weekNumber}</title>
-    {else}
-    <title>背锅周报 - {$weekNumber} 周</title>
-    {/if}
+    <!--{if $lang === 0}-->
+    <title>Hotsweek Report - Week Number </title>
+    <!--{else}-->
+    <title>背锅周报 -  周</title>
+    <!--{/if}-->
     <script>
-        var playerID = {$playerID};
-        var weekNumber = {$weekNumber};
-        var lang = {$lang};
+        var playerID = 11519;
+        var weekNumber = 2531;
+        var lang = 1;
     </script>
-    <script src="/scripts/hotsweek/js/presets.js"></script>
-    <script src="/scripts/hotsweek/js/main.js"></script>
+    <script src="../../../../public/scripts/hotsweek/js/main.js"></script>
+    <script src="../../../../public/scripts/hotsweek/js/presetsNo5.js"></script>
+    <script src="../../../../public/scripts/hotsweek/js/presets.js"></script>
 </head>
 <body>
 
